2014-09-24  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (make_lispy_event): Avoid unnecessary tests
	of bit 28 and of whether an unsigned value is negative.
	This simplifies the code a bit, and pacifies clang 3.4.

2014-09-24  Eli Zaretskii  <eliz@gnu.org>

	* systime.h (Time): Define as size_t, to be consistent with 64-bit
	Windows builds, where 'long' is a 32-bit type.

	* w32inevt.h (w32_console_mouse_position): Update the argument
	types to use 'Time'.

	* w32term.c (w32_mouse_position)
	(x_horizontal_scroll_bar_report_motion)
	(x_scroll_bar_report_motion): Update the argument types to use
	'Time'.

2014-09-24  Dmitry Antipov  <dmantipov@yandex.ru>

	* termhooks.h (enum scroll_bar_part): Begin from 0 to allow...
	(struct input_event): ...unsigned bitfields.  Likewise for
	`event_kind' member.  Prefer unsigned for `code' and 'modifiers'.
	Use `timestamp' for HELP_EVENT position.  Add compile-time assert.
	* keyboard.c (gen_help_event, kbd_buffer_store_help_event)
	(kbd_buffer_get_event): Adjust users.
	(scroll_bar_parts): Add Qnil to match scroll_bar_nowhere.
	(make_scroll_bar_position): New function, refactored out of...
	(make_lispy_event): ...adjusted user.
	* nsterm.h (EmacsScroller): Use enum for `last_hit_part' member.
	* nsterm.m (ns_mouse_position, mouseUp):
	* term.c (term_mouse_position):
	* w32inevt.c (w32_console_mouse_position):
	* w32term.c (w32_mouse_position):
	* xterm.c (XTmouse_position): Use scroll_bar_above_handle.
	(x_send_scroll_bar_event, xm_scroll_callback, xg_scroll_callback):
	Prefer enum and explicit enum members to integers and numeric values.

	* chartab.c (uniprop_encode_value_numeric):
	* font.c (font_style_to_value): Use make_local_vector.
	(font_delete_unmatched): Use local_cons but respect MAX_ALLOCA.
	* keymap.c (append_key): Use scoped_list1.

	* lisp.h (USE_STACK_LISP_OBJECTS): Enable by default if GNU_LINUX
	&& __GNUC__ && !__clang__.  Mention known problems.  Adjust comment.
